IsShadowRootFlag should not depend on whether a ShadowRoot is attached to a host. https://bugs.webkit.org/show_bug.cgi?id=69406

Reviewed by Hajime Morita.

No change in behavior => No new tests.

* dom/Node.cpp:
(WebCore::Node::setShadowHost): Don't twiddle the flag.
* dom/Node.h:
* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::ShadowRoot): Set the IsShadowRootFlag on creation.
* dom/TreeScope.cpp:
(WebCore::TreeScope::TreeScope): Let ShadowRoot set creation flags.
* dom/TreeScope.h:


Canonical link: https://commits.webkit.org/85540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96782 268f45cc-cd09-0410-ab3c-d52691b4dbfc